--- a/views/admin/editCategories.ejs
+++ b/views/admin/editCategories.ejs
@@ -107,20 +107,15 @@
                                 setTimeout(() => {
                                     location.href = res.data.url;
                                 }, 3000);
-                            } else {
-                                console.error(res.data);
                             }
                         })
                         .catch(err => {
-                            if (!err.response.data.success) {
                                 Swal.fire({
                                     icon: 'error',
-                                    title: 'Error',
-                                    text: err.response.data.message,
+                                    title: 'Operation Failed',
+                                    text:err.response?.data?.message || "Something went wrong.",
                                 });
-                            } else {
-                                console.error(err);
-                            }
+                          
                         });
                 });
 
