--- a/views/user/contact.ejs
+++ b/views/user/contact.ejs
@@ -149,7 +149,7 @@
                 } catch (error) {
                     Swal.fire({
                         icon: "error",
-                        title: "Server Error!",
+                        title: "Failed!",
                         text: "Please try again later.",
                         confirmButtonColor: "#d33"
                     });
