--- a/views/user/resetpassword.ejs
+++ b/views/user/resetpassword.ejs
@@ -142,21 +142,13 @@
                                                 }).then(() => {
                                                     window.location.href = response.data.url;
                                                 });
-                                            } else {
-                                                Swal.fire({
-                                                    title: 'Error!',
-                                                    text: response.data.message,
-                                                    icon: 'error',
-                                                    confirmButtonText: 'OK'
-                                                });
-                                            }
+                                            } 
                                         })
                                         .catch(error => {
-                                            // Handle error
-                                            console.error('Error:', error);
+                                            // Handle error                                         
                                             Swal.fire({
-                                                title: 'Error!',
-                                                text: 'An error occurred while resetting your password. Please try again later.',
+                                                title: 'Failed!',
+                                                text: error.response?.data?.message || "Something went wrong.",
                                                 icon: 'error',
                                                 confirmButtonText: 'OK'
                                             });
