--- a/adminAssets/css/main.css
+++ b/adminAssets/css/main.css
@@ -4917,6 +4917,38 @@ body.dark .dropdown-menu .dropdown-item.text-danger {
 }
 
 
+#categoryPhoto {
+    display: none;
+}
+
+.picture {
+    width: 300px;
+    height: 300px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 2px dashed #088178;
+    cursor: pointer;
+    transition: color 300ms ease-in-out, background 300ms ease-in-out;
+    overflow: hidden;
+    margin-top: 20px;
+    position: relative;
+}
+
+.picture img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.picture:active {
+    border-color: turquoise;
+    color: turquoise;
+    background: #eee;
+}
 
 
 img {
