--- a/views/admin/listCoupon.ejs
+++ b/views/admin/listCoupon.ejs
@@ -323,10 +323,9 @@
                                         location.reload();
                                     }, 1000);
                                 })
-                                .catch(error => {
-                                    console.error('Error deleting coupon:', error);
+                                .catch(error => { 
                                     Swal.fire(
-                                        'Error!',
+                                        'Operation Failed',
                                         'An error occurred while deleting the coupon.',
                                         'error'
                                     );
@@ -458,9 +457,7 @@
                                     var modalButton = $(`#editCouponModal-${couponId} .btn-primary`);
                                     var errorMessage = $('#form-errors').text(err.response.data.message);
                                     modalButton.after(errorMessage);
-                                } else {
-                                    console.error(err);
-                                }
+                                } 
                             });
 
                     });
